--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -9,7 +9,7 @@
 
 
 nav{
-    @apply p-0.25 w-full shadow-2xl bg-blend-color bg-blue-950 fixed top-0 z-50
+    @apply p-0.25 w-full shadow-2xl bg-blend-color bg-blue-950 fixed top-0 z-50 border-2 border-b-white
 }
 
 ul{
@@ -65,6 +65,18 @@ input, select{
 
 .listDiv{
     @apply w-full flex flex-wrap items-center justify-between bg-gray-100 px-6 py-4 rounded-xl shadow-md border-b-4 border-r-4 border-b-gray-400 border-r-gray-400 hover:shadow-lg transition-shadow duration-300
+}
+
+.div-des{
+    @apply flex flex-col items-center align-top m-8 bg-gradient-to-b from-white to-blue-50 rounded-2xl shadow-md hover:shadow-lg transition-shadow duration-300
+}
+
+.add{
+    @apply bg-amber-400 hover:bg-amber-500 text-white font-semibold px-6 py-2 rounded-lg transition hover:scale-105 duration-300
+}
+
+.line{
+    @apply mx-auto w-24 border-4 border-gray-400 rounded-2xl mt-2
 }
 
 /* * {
